@@ -1,3 +1,4 @@
+<<<<<<< HEAD
 1.2.3i1:
     Core:
     * Agents can send data for other hosts "piggyback". This is being
@@ -111,6 +112,9 @@
     * FIX: do not remove directories of non-exisant users anymore. This lead to
            a deletion of users' settings in case of an external authentication
            (like mod_ldap).
+    WATO:
+    * Improved handling of valuespec validations in WATO rule editor. Displaying a
+      warning message when going to throw away the current settings.
 
 1.2.2:
     Core:
